styles/Product.module.css
.container {
  height: 100vh;
  margin-top: 10vh;
  margin: 0 2rem;
  display: grid;
  grid-template-columns: 40vw minmax(min-content, 60vw);
  grid-gap: 5rem;
  align-content: center;
}

.pizzaImg {
  grid-column: 1 / 1;
  width: 100%;
  height: 100%;
}

.pizzaOptions {
  grid-column: 2 / -1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.pizzaOptions > * {
  margin-bottom: 2rem;
}

.pizzaOptions > h2 {
  color: var(--main-color);
  text-decoration: underline;
  text-underline-offset: 3px;
}

.pizzaOptions .description {
  font-size: 1.3rem;
  font-weight: 400;
}

.pizzaOptions .size h2 {
  margin-bottom: 2rem;
}

.pizzaOptions .size .pizzaSizes {
  width: 30vw;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.sizeContainer {
  position: relative;
  padding: 2rem;
  cursor: pointer;
}

.sizeContainer .category {
  position: absolute;
  top: 1rem;
  right: 0;
  color: var(--color-white);
  background-color: var(--color-pizza-size);
  padding: 0 1rem;
  border-radius: 1rem;
  z-index: 1;
}

.pizzaOptions .additional h2 {
  margin-bottom: 2rem;
}

.additionContainer {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  width: 55rem;
}

.checkbox {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  accent-color: var(--main-color);
}

.checkboxTitle {
  font-size: 1.2rem;
  font-weight: 400;
  margin-right: 1rem;
}

.submit {
  width: 24rem;
  display: flex;
  justify-content: space-between;
}

@media screen and (max-width: 1200px) {
  .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .pizzaImg {
    display: block;
    width: 100%;
    height: 35%;
  }

  .pizzaOptions {
    grid-row: 2 / -1;
  }
}

@media screen and (min-width: 630px) and (max-width: 840px) {
  .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: max-content;
  }

  .pizzaImg {
    padding-top: 20rem;
    width: 100%;
    height: 70vh;
  }

  .pizzaOptions {
    grid-row: 2 / -1;
  }

  .pizzaOptions .size .pizzaSizes {
    width: 70vw;
  }

  .sizeContainer .category {
    font-size: 1.7rem;
    position: absolute;
    top: 0;
  }
}

@media screen and (min-width: 840px) and (max-width: 1200px) {
  .container {
    margin-bottom: 4rem;
    height: max-content;
  }
  .pizzaImg {
    padding-top: 22rem;
    width: 80%;
    height: 70vh;
  }

  .pizzaOptions .size .pizzaSizes {
    width: 70vw;
  }

  .sizeContainer .category {
    font-size: 1.7rem;
    position: absolute;
    top: 0;
  }
}

@media screen and (min-width: 460px) and (max-width: 1200px) and (max-height: 980px) {
  .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    height: max-content;
  }

  .pizzaImg {
    align-self: center;
    padding-top: 18.5rem;
    width: 40%;
    height: 60%;
  }

  .pizzaOptions {
    grid-row: 2 / -1;
  }

  .pizzaOptions .size .pizzaSizes {
    width: 70vw;
  }

  .sizeContainer .category {
    font-size: 1.7rem;
    position: absolute;
    top: 0;
  }
}

@media screen and (max-width: 600px) {
  .container {
    place-items: center;
    height: max-content;
  }

  .pizzaOptions .size .pizzaSizes {
    width: 48vw;
  }

  .sizeContainer .category {
    font-size: 1.2rem;
    position: absolute;
    top: 0;
  }

  .additionContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .pizzaOptions {
    width: 40vw;
    display: grid;
    grid-column: 2 / -1;
    place-items: center;
  }

  .pizzaOptions .size .pizzaSizes {
    width: 30vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .additional {
    text-align: center;
  }

  .additional .additionContainer {
    width: max-content;
  }

  .submit {
    flex-direction: column;
  }
}

@media screen and (max-width: 400px) {
  .pizzaOptions {
    /* grid-column: 1 / 1; */
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .additionContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .submit {
    width: 10rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
}

